# snowflake-excel-streamlit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py  snowpark_services.yml
config/: config.yaml  config.yaml.example  setup.sh
excel_to_bronze/: __init__.py  __main__.py  config.py
excel_to_bronze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
excel_to_bronze/connectors/: __init__.py  snowflake.py
excel_to_bronze/ingestion/: __init__.py  base.py  bronze.py  serializers.py
excel_to_bronze/utils/: __init__.py  logging.py
scripts/: bronze_ingestor.py  create_iceberg.py  deploy_snowpark.py  ingest.py  ingest_pooled.py  login_snowflake_registry.py
